# trick

./: .gitignore  BUILD_NATIVE_LIB_INTELLIJ.md  CLAUDE.md  PRIVACY_POLICY.md  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  results_performance_report.md  settings.gradle.kts
.github/workflows/: ci.yml
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/commonMain/proto/: message.proto
composeApp/src/debug/: AndroidManifest.xml
composeApp/src/nativeInterop/cinterop/: LibSignalBridge.h  libsignal.def  signal_ffi.h
docs/: CNAME  SIGNAL_PROTOCOL_MIGRATION_PLAN.md  index.html
gradle/: libs.versions.toml
iosApp/: Podfile
iosApp/Configuration/: Config.xcconfig
iosApp/SignalBridge/: SignalBridge.podspec
iosApp/SignalBridge/Sources/SignalBridge/: LibSignalBridgeShim.swift
iosApp/iosApp/: ContentView.swift  ImagePickerCoordinator.swift  Info.plist  LibSignalBridge.swift  NativePairingScreen.swift  WifiAwareBridge.swift  WifiAwarePairingCoordinator.swift  WifiAwarePairingView.swift  WifiAwareServices.swift  iOSApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/iosApp/Assets.xcassets/AccentColor.colorset/: Contents.json
iosApp/iosApp/Assets.xcassets/AppIcon.appiconset/: Contents.json
iosApp/iosApp/Preview Content/Preview Assets.xcassets/: Contents.json
rust/trick-signal-ffi/: Cargo.toml  build-android.sh  build-ios.sh  build.rs  cbindgen.toml
rust/trick-signal-ffi/src/: error.rs  ffi.rs  jni_bridge.rs  lib.rs  ops.rs  stores.rs
(+360 files in other folders)
