[package]
name = "trick-signal-ffi"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", tag = "v0.86.7" }
libsignal-core = { git = "https://github.com/signalapp/libsignal", tag = "v0.86.7" }
async-trait = "0.1"
rand = "0.9"
futures = { version = "0.3", default-features = false, features = ["executor"] }
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[build-dependencies]
cbindgen = "0.27"
